Fixed overflow y scroll error

--- a/client_server_src/client/src/App.css
+++ b/client_server_src/client/src/App.css
@@ -212,7 +212,8 @@
   font-size: 15px;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  scrollbar-color: rgb(197, 40, 40);
+  overflow-y: auto;
 
 }
 
